Fixes only one search result from showing, stops resetting array to blank in for each loop, adds break in for loop to only push one flight into the array when one matches

--- a/app.css
+++ b/app.css
@@ -77,6 +77,7 @@ nav a:first-child{
 #btnSearch{
   color: white;
   background-color: rgba(222, 22, 102, 1);
+  cursor:pointer;
 }
 #boxFromCity, #boxToCity{
   position: relative;
@@ -203,4 +204,9 @@ main{
   top:0;
   left:0;
   display:grid;
+}
+
+.invalid {
+  background-color:pink;
+
 }
